--- a/augustinus/Makefile
+++ b/augustinus/Makefile
@@ -1,2 +1,8 @@
-confessiones: confessiones1.md
-	../scr.pl --prose confessiones1.md | pandoc -f markdown-smart -o out.html -s --css ../tufte/tufte.css && perl -pe 's/<img src/<img width="90" height="90" src/g' out.html > confessiones1.html && rm out.html && scpToWebsite.sh confessiones1.html
+MD_FILES := $(wildcard confessiones*.md)
+
+HTML_FILES := $(MD_FILES:.md=.html)
+
+all: $(HTML_FILES)
+
+confessiones%.html: confessiones%.md
+	../scr.pl --prose $< | pandoc -f markdown-smart -o out.html -s --css ../tufte/tufte.css && perl -pe 's/<img src/<img width="90" height="90" src/g' out.html > $@ && rm out.html && scpToWebsite.sh -f latin $@ && rm $@
